# QuantIV

./: CMakeLists.txt  README.md  requirements.txt
data/real/: AAPL_historical.csv  AAPL_options.csv  AMZN_historical.csv  AMZN_options.csv  GOOGL_historical.csv  GOOGL_options.csv  MSFT_historical.csv  MSFT_options.csv  NVDA_historical.csv  NVDA_options.csv  QQQ_historical.csv  QQQ_options.csv  SPY_historical.csv  SPY_options.csv  TSLA_historical.csv  TSLA_options.csv  data_summary.json
data/real/docs/: volatility_alchemist_research_paper.tex
docs/: index.html  ml_dashboard.html
docs/css/: styles.css
docs/data/cboe/: README.md
docs/data/ml_features/: AAPL_ml_features_sample.csv  AMZN_ml_features_sample.csv  GOOGL_ml_features_sample.csv  MSFT_ml_features_sample.csv  NVDA_ml_features_sample.csv  QQQ_ml_features_sample.csv  README.md  SPY_ml_features_sample.csv  TSLA_ml_features_sample.csv
docs/data/processed/: AAPL_processed_sample.csv  AMZN_processed_sample.csv  GOOGL_processed_sample.csv  MSFT_processed_sample.csv  NVDA_processed_sample.csv  QQQ_processed_sample.csv  (+3 more)
docs/js/: charts.js  data_loader.js
scripts/: build.sh  download_data.sh  fetch_real_data.py  run_ml_analysis.py  simple_ml_analysis.py
src/: main.cpp
src/core/: data_loader.cpp  data_loader.hpp  exporter.cpp  exporter.hpp  metrics.cpp  metrics.hpp  strategy_engine.cpp  strategy_engine.hpp  volatility_model.cpp  volatility_model.hpp
src/ml/: __init__.py
src/models/: black_scholes.cpp  black_scholes.hpp
src/utils/: date_utils.cpp  date_utils.hpp  http_client.cpp  http_client.hpp
(+26 files in other folders)
